packages/dartcv/src/imgproc/imgproc.h


CvStatus* cv_getGaussianKernel(
    int ksize, double sigma, int ktype, Mat* rval, CvCallback_0 callback
);
CvStatus* cv_getStructuringElement(int shape, CvSize ksize, Mat* rval, CvCallback_0 callback);
CvStatus* cv_medianBlur(Mat src, Mat dst, int ksize, CvCallback_0 callback);
CvStatus* cv_morphologyDefaultBorderValue(Scalar* rval, CvCallback_0 callback);
CvStatus* cv_morphologyEx(Mat src, Mat dst, int op, Mat kernel, CvCallback_0 callback);
CvStatus* cv_morphologyEx_1(
    Mat src,
    Mat dst,
    int op,
    Mat kernel,
    CvPoint pt,
    int iterations,
    int borderType,
    Scalar borderValue,
    CvCallback_0 callback
);
CvStatus* cv_pyrDown(Mat src, Mat dst, CvSize dstsize, int borderType, CvCallback_0 callback);
CvStatus* cv_pyrUp(Mat src, Mat dst, CvSize dstsize, int borderType, CvCallback_0 callback);
CvStatus* cv_getAffineTransform(VecPoint src, VecPoint dst, Mat* rval, CvCallback_0 callback);
CvStatus* cv_getAffineTransform2f(VecPoint2f src, VecPoint2f dst, Mat* rval, CvCallback_0 callback);
CvStatus* cv_getPerspectiveTransform(
    VecPoint src, VecPoint dst, Mat* rval, int solveMethod, CvCallback_0 callback
);
CvStatus* cv_getPerspectiveTransform2f(
    VecPoint2f src, VecPoint2f dst, Mat* rval, int solveMethod, CvCallback_0 callback
);
CvStatus* cv_getRectSubPix(
    Mat src, CvSize patchSize, CvPoint2f center, Mat dst, CvCallback_0 callback
);
CvStatus* cv_getRotationMatrix2D(
    CvPoint2f center, double angle, double scale, Mat* rval, CvCallback_0 callback
);
CvStatus* cv_invertAffineTransform(Mat src, Mat dst, CvCallback_0 callback);
CvStatus* cv_linearPolar(
    Mat src, Mat dst, CvPoint2f center, double maxRadius, int flags, CvCallback_0 callback
);
CvStatus* cv_logPolar(
    Mat src, Mat dst, CvPoint2f center, double m, int flags, CvCallback_0 callback
);
CvStatus* cv_remap(
    Mat src,
    Mat dst,
    Mat map1,
    Mat map2,
    int interpolation,
    int borderMode,
    Scalar borderValue,
    CvCallback_0 callback
);
CvStatus* cv_resize(
    Mat src, Mat dst, CvSize sz, double fx, double fy, int interp, CvCallback_0 callback
);
CvStatus* cv_floodFill(
    Mat src,
    Mat mask,
    CvPoint seedPoint,
    Scalar newVal,
    CvRect* rect,
    Scalar loDiff,
    Scalar upDiff,
    int flags,
    int* rval,
    CvCallback_0 callback
);
CvStatus* cv_integral(
    Mat src, Mat sum, Mat sqsum, Mat tilted, int sdepth, int sqdepth, CvCallback_0 callback
);
CvStatus* cv_getTextSize(
    const char* text,
    int fontFace,
    double fontScale,
    int thickness,
    int* baseline,
    CvSize* rval,
    CvCallback_0 callback
);
CvStatus* cv_line(
    Mat img,
    CvPoint pt1,
    CvPoint pt2,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
    CvCallback_0 callback
);
CvStatus* cv_polylines(
    Mat img, VecVecPoint points, bool isClosed, Scalar color, int thickness, CvCallback_0 callback
);
CvStatus* cv_putText(
    Mat img,
    const char* text,
    CvPoint org,
    int fontFace,
    double fontScale,
    Scalar color,
    int thickness,
    CvCallback_0 callback
);
CvStatus* cv_putText_1(
    Mat img,
    const char* text,
    CvPoint org,
    int fontFace,
    double fontScale,
    Scalar color,
    int thickness,
    int lineType,
    bool bottomLeftOrigin,
    CvCallback_0 callback
);
CvStatus* cv_rectangle(Mat img, CvRect rect, Scalar color, int thickness, CvCallback_0 callback);
CvStatus* cv_rectangle_1(
    Mat img,
    CvRect rect,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
    CvCallback_0 callback
);
CvStatus* cv_intersectConvexConvex(VecPoint p1, VecPoint p2, VecPoint* p12, bool handleNested, float *rval, CvCallback_0 callback);
bool cv_isContourConvex(VecPoint contour);
CvStatus* cv_matchShapes(
    VecPoint contour1,
    VecPoint contour2,
    int method,
    double parameter,
    double* rval,
    CvCallback_0 callback
);
CvStatus* cv_minAreaRect(VecPoint pts, RotatedRect* rval, CvCallback_0 callback);
CvStatus* cv_minEnclosingCircle(
    VecPoint pts, CvPoint2f* center, float* radius, CvCallback_0 callback
);
CvStatus* cv_moments(Mat src, bool binaryImage, Moment* rval, CvCallback_0 callback);
CvStatus* cv_pointPolygonTest(
    VecPoint pts, CvPoint2f pt, bool measureDist, double* rval, CvCallback_0 callback
);
CvStatus* cv_phaseCorrelate(
    Mat src1, Mat src2, Mat window, double* response, CvPoint2f* rval, CvCallback_0 callback
);
CvStatus* cv_goodFeaturesToTrack(
    Mat img,
    VecPoint2f* corners,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    bool useHarrisDetector,
    double k,
    CvCallback_0 callback
);
CvStatus* cv_goodFeaturesToTrack_1(
    Mat img,
    VecPoint2f* corners,
    int maxCorners,
    double quality,
    double minDist,
    Mat mask,
    int blockSize,
    int gradientSize,
    bool useHarrisDetector,
    double k,
    CvCallback_0 callback
);
CvStatus* cv_matchTemplate(
    Mat image, Mat templ, Mat result, int method, Mat mask, CvCallback_0 callback
);
CvStatus* cv_grabCut(
    Mat img,
    Mat mask,
    CvRect rect,
    Mat bgdModel,
    Mat fgdModel,
    int iterCount,
    int mode,
    CvCallback_0 callback
);