lib/src/g/imgproc.g.dart


@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat,
        Mat,
        CvPoint,
        Scalar,
        ffi.Pointer<CvRect>,
        Scalar,
        Scalar,
        ffi.Int,
        ffi.Pointer<ffi.Int>,
        imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_floodFill(
  Mat src,
  Mat mask,
  CvPoint seedPoint,
  Scalar newVal,
  ffi.Pointer<CvRect> rect,
  Scalar loDiff,
  Scalar upDiff,
  int flags,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, VecPoint, ffi.Pointer<Mat>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getAffineTransform(
  VecPoint src,
  VecPoint dst,
  ffi.Pointer<Mat> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint2f, VecPoint2f, ffi.Pointer<Mat>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getAffineTransform2f(
  VecPoint2f src,
  VecPoint2f dst,
  ffi.Pointer<Mat> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, ffi.Double, ffi.Int, ffi.Pointer<Mat>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getGaussianKernel(
  int ksize,
  double sigma,
  int ktype,
  ffi.Pointer<Mat> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, VecPoint, ffi.Pointer<Mat>, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getPerspectiveTransform(
  VecPoint src,
  VecPoint dst,
  ffi.Pointer<Mat> rval,
  int solveMethod,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint2f, VecPoint2f, ffi.Pointer<Mat>, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getPerspectiveTransform2f(
  VecPoint2f src,
  VecPoint2f dst,
  ffi.Pointer<Mat> rval,
  int solveMethod,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, CvSize, CvPoint2f, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getRectSubPix(
  Mat src,
  CvSize patchSize,
  CvPoint2f center,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(CvPoint2f, ffi.Double, ffi.Double,
        ffi.Pointer<Mat>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getRotationMatrix2D(
  CvPoint2f center,
  double angle,
  double scale,
  ffi.Pointer<Mat> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Int, CvSize, ffi.Pointer<Mat>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getStructuringElement(
  int shape,
  CvSize ksize,
  ffi.Pointer<Mat> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        ffi.Pointer<ffi.Char>,
        ffi.Int,
        ffi.Double,
        ffi.Int,
        ffi.Pointer<ffi.Int>,
        ffi.Pointer<CvSize>,
        imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_getTextSize(
  ffi.Pointer<ffi.Char> text,
  int fontFace,
  double fontScale,
  int thickness,
  ffi.Pointer<ffi.Int> baseline,
  ffi.Pointer<CvSize> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat,
        ffi.Pointer<VecPoint2f>,
        ffi.Int,
        ffi.Double,
        ffi.Double,
        Mat,
        ffi.Int,
        ffi.Bool,
        ffi.Double,
        imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_goodFeaturesToTrack(
  Mat img,
  ffi.Pointer<VecPoint2f> corners,
  int maxCorners,
  double quality,
  double minDist,
  Mat mask,
  int blockSize,
  bool useHarrisDetector,
  double k,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat,
        ffi.Pointer<VecPoint2f>,
        ffi.Int,
        ffi.Double,
        ffi.Double,
        Mat,
        ffi.Int,
        ffi.Int,
        ffi.Bool,
        ffi.Double,
        imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_goodFeaturesToTrack_1(
  Mat img,
  ffi.Pointer<VecPoint2f> corners,
  int maxCorners,
  double quality,
  double minDist,
  Mat mask,
  int blockSize,
  int gradientSize,
  bool useHarrisDetector,
  double k,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, CvRect, Mat, Mat, ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_grabCut(
  Mat img,
  Mat mask,
  CvRect rect,
  Mat bgdModel,
  Mat fgdModel,
  int iterCount,
  int mode,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, Mat, ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_integral(
  Mat src,
  Mat sum,
  Mat sqsum,
  Mat tilted,
  int sdepth,
  int sqdepth,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, VecPoint, ffi.Pointer<VecPoint>,
        ffi.Bool, ffi.Pointer<ffi.Float>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_intersectConvexConvex(
  VecPoint p1,
  VecPoint p2,
  ffi.Pointer<VecPoint> p12,
  bool handleNested,
  ffi.Pointer<ffi.Float> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_invertAffineTransform(
  Mat src,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Bool Function(VecPoint)>()
external bool cv_isContourConvex(
  VecPoint contour,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, Scalar, ffi.Int,
        ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_line(
  Mat img,
  CvPoint pt1,
  CvPoint pt2,
  Scalar color,
  int thickness,
  int lineType,
  int shift,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, CvPoint2f, ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_linearPolar(
  Mat src,
  Mat dst,
  CvPoint2f center,
  double maxRadius,
  int flags,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, CvPoint2f, ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_logPolar(
  Mat src,
  Mat dst,
  CvPoint2f center,
  double m,
  int flags,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, VecPoint, ffi.Int, ffi.Double,
        ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_matchShapes(
  VecPoint contour1,
  VecPoint contour2,
  int method,
  double parameter,
  ffi.Pointer<ffi.Double> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, ffi.Int, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_matchTemplate(
  Mat image,
  Mat templ,
  Mat result,
  int method,
  Mat mask,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_medianBlur(
  Mat src,
  Mat dst,
  int ksize,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, ffi.Pointer<RotatedRect>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_minAreaRect(
  VecPoint pts,
  ffi.Pointer<RotatedRect> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Pointer<CvPoint2f>,
        ffi.Pointer<ffi.Float>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_minEnclosingCircle(
  VecPoint pts,
  ffi.Pointer<CvPoint2f> center,
  ffi.Pointer<ffi.Float> radius,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, ffi.Bool, ffi.Pointer<Moment>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_moments(
  Mat src,
  bool binaryImage,
  ffi.Pointer<Moment> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(ffi.Pointer<Scalar>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_morphologyDefaultBorderValue(
  ffi.Pointer<Scalar> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_morphologyEx(
  Mat src,
  Mat dst,
  int op,
  Mat kernel,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, Mat, CvPoint, ffi.Int,
        ffi.Int, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_morphologyEx_1(
  Mat src,
  Mat dst,
  int op,
  Mat kernel,
  CvPoint pt,
  int iterations,
  int borderType,
  Scalar borderValue,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, ffi.Pointer<ffi.Double>,
        ffi.Pointer<CvPoint2f>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_phaseCorrelate(
  Mat src1,
  Mat src2,
  Mat window,
  ffi.Pointer<ffi.Double> response,
  ffi.Pointer<CvPoint2f> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, CvPoint2f, ffi.Bool,
        ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_pointPolygonTest(
  VecPoint pts,
  CvPoint2f pt,
  bool measureDist,
  ffi.Pointer<ffi.Double> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, VecVecPoint, ffi.Bool, Scalar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_polylines(
  Mat img,
  VecVecPoint points,
  bool isClosed,
  Scalar color,
  int thickness,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Char>, CvPoint, ffi.Int,
        ffi.Double, Scalar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_putText(
  Mat img,
  ffi.Pointer<ffi.Char> text,
  CvPoint org,
  int fontFace,
  double fontScale,
  Scalar color,
  int thickness,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<ffi.Char>, CvPoint, ffi.Int,
        ffi.Double, Scalar, ffi.Int, ffi.Int, ffi.Bool, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_putText_1(
  Mat img,
  ffi.Pointer<ffi.Char> text,
  CvPoint org,
  int fontFace,
  double fontScale,
  Scalar color,
  int thickness,
  int lineType,
  bool bottomLeftOrigin,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, CvSize, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_pyrDown(
  Mat src,
  Mat dst,
  CvSize dstsize,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, CvSize, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_pyrUp(
  Mat src,
  Mat dst,
  CvSize dstsize,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, CvRect, Scalar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_rectangle(
  Mat img,
  CvRect rect,
  Scalar color,
  int thickness,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, CvRect, Scalar, ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_rectangle_1(
  Mat img,
  CvRect rect,
  Scalar color,
  int thickness,
  int lineType,
  int shift,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, Mat, ffi.Int, ffi.Int, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_remap(
  Mat src,
  Mat dst,
  Mat map1,
  Mat map2,
  int interpolation,
  int borderMode,
  Scalar borderValue,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, CvSize, ffi.Double, ffi.Double, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_resize(
  Mat src,
  Mat dst,
  CvSize sz,
  double fx,
  double fy,
  int interp,
  imp1.CvCallback_0 callback,
);
